// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameService add player returns valid player 1`] = `
Object {
  "deck": Array [],
  "id": Any<String>,
  "isAI": false,
  "isActive": false,
  "isHost": false,
  "nickname": "foo",
  "points": 0,
  "token": Any<String>,
}
`;

exports[`GameService builds pile works 1`] = `
Object {
  "discardedPrompts": Array [],
  "discardedResponses": Array [],
  "prompts": Any<Array>,
  "responses": Any<Array>,
}
`;

exports[`GameService create / join game creates empty game 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": false,
    "id": Any<String>,
    "packs": Array [],
    "specialRules": Object {
      "aiPlayerCount": 0,
      "allowDiscarding": Object {
        "enabled": false,
        "penalty": 0,
      },
      "pickExtra": false,
    },
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [],
  "rounds": Array [],
}
`;

exports[`GameService create / join game creates game with two packs and password 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": true,
    "id": Any<String>,
    "packs": Array [
      Object {
        "abbr": "Base-INTL",
        "description": "",
        "icon": "",
        "name": "Base Set (INTL Version)",
        "official": true,
      },
      Object {
        "abbr": "absurd-box-expansion",
        "description": "",
        "icon": "la-stroopwafel",
        "name": "Absurd Box Expansion",
        "official": true,
      },
    ],
    "password": Any<String>,
    "specialRules": Object {
      "aiPlayerCount": 0,
      "allowDiscarding": Object {
        "enabled": false,
        "penalty": 0,
      },
      "pickExtra": false,
    },
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [],
  "rounds": Array [],
}
`;

exports[`GameService create / join game rejects invalid packs 1`] = `[AssertionError: Invalid pack 0.]`;

exports[`GameService create / join game rejects invalid packs 2`] = `[AssertionError: Invalid pack foooooo.]`;

exports[`GameService static information lists available packs 1`] = `
Array [
  Object {
    "abbr": "Base-INTL",
    "description": "",
    "icon": "",
    "name": "Base Set (INTL Version)",
    "official": true,
    "promptsCount": 89,
    "responsesCount": 510,
  },
  Object {
    "abbr": "Base-AU",
    "description": "",
    "icon": "",
    "name": "Base Set (AU Version)",
    "official": true,
    "promptsCount": 99,
    "responsesCount": 499,
  },
  Object {
    "abbr": "Base-UK",
    "description": "",
    "icon": "",
    "name": "Base Set (UK Version)",
    "official": true,
    "promptsCount": 99,
    "responsesCount": 499,
  },
  Object {
    "abbr": "Base-US",
    "description": "",
    "icon": "",
    "name": "Base Set",
    "official": true,
    "promptsCount": 99,
    "responsesCount": 499,
  },
  Object {
    "abbr": "Base-CA",
    "description": "",
    "icon": "",
    "name": "Base Set (CA Version)",
    "official": true,
    "promptsCount": 99,
    "responsesCount": 499,
  },
  Object {
    "abbr": "family-edition",
    "description": "",
    "icon": "la-baby",
    "name": "Family Edition (Free Print & Play Public Beta)",
    "official": true,
    "promptsCount": 67,
    "responsesCount": 346,
  },
  Object {
    "abbr": "procedurally-generated-cards",
    "description": "",
    "icon": "",
    "name": "Procedurally-Generated Cards",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 292,
  },
  Object {
    "abbr": "red-box-expansion",
    "description": "",
    "icon": "♦",
    "name": "Red Box Expansion",
    "official": true,
    "promptsCount": 72,
    "responsesCount": 282,
  },
  Object {
    "abbr": "absurd-box-expansion",
    "description": "",
    "icon": "la-stroopwafel",
    "name": "Absurd Box Expansion",
    "official": true,
    "promptsCount": 44,
    "responsesCount": 256,
  },
  Object {
    "abbr": "green-box-expansion",
    "description": "",
    "icon": "●",
    "name": "Green Box Expansion",
    "official": true,
    "promptsCount": 55,
    "responsesCount": 248,
  },
  Object {
    "abbr": "blue-box-expansion",
    "description": "",
    "icon": "▲",
    "name": "Blue Box Expansion",
    "official": true,
    "promptsCount": 80,
    "responsesCount": 239,
  },
  Object {
    "abbr": "first-expansion",
    "description": "",
    "icon": "1",
    "name": "First Expansion",
    "official": true,
    "promptsCount": 27,
    "responsesCount": 111,
  },
  Object {
    "abbr": "pax-prime-2014-custom-printed-cards",
    "description": "",
    "icon": "",
    "name": "PAX Prime 2014 Custom Printed Cards",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 104,
  },
  Object {
    "abbr": "second-expansion",
    "description": "",
    "icon": "2",
    "name": "Second Expansion",
    "official": true,
    "promptsCount": 27,
    "responsesCount": 83,
  },
  Object {
    "abbr": "fifth-expansion",
    "description": "",
    "icon": "5",
    "name": "Fifth Expansion",
    "official": true,
    "promptsCount": 24,
    "responsesCount": 77,
  },
  Object {
    "abbr": "sixth-expansion",
    "description": "",
    "icon": "6",
    "name": "Sixth Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 76,
  },
  Object {
    "abbr": "third-expansion",
    "description": "",
    "icon": "3",
    "name": "Third Expansion",
    "official": true,
    "promptsCount": 24,
    "responsesCount": 76,
  },
  Object {
    "abbr": "fourth-expansion",
    "description": "",
    "icon": "4",
    "name": "Fourth Expansion",
    "official": true,
    "promptsCount": 30,
    "responsesCount": 70,
  },
  Object {
    "abbr": "pax-prime-2013",
    "description": "",
    "icon": "la-paypal",
    "name": "PAX Prime 2013",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 36,
  },
  Object {
    "abbr": "a-i",
    "description": "",
    "icon": "la-robot",
    "name": "A.I. Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 29,
  },
  Object {
    "abbr": "human",
    "description": "",
    "icon": "la-user-edit",
    "name": "Human Pack",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 27,
  },
  Object {
    "abbr": "theatre-cats-musical",
    "description": "",
    "icon": "la-cat",
    "name": "Theatre Pack - CATS Musical Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 26,
  },
  Object {
    "abbr": "ass",
    "description": "",
    "icon": "ass",
    "name": "Ass Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 26,
  },
  Object {
    "abbr": "cards-against-humanity-saves-america",
    "description": "",
    "icon": "la-star",
    "name": "Cards Against Humanity Saves America Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 25,
  },
  Object {
    "abbr": "fantasy",
    "description": "",
    "icon": "la-hat-wizard",
    "name": "Fantasy Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 25,
  },
  Object {
    "abbr": "weed",
    "description": "",
    "icon": "la-cannabis",
    "name": "Weed Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 24,
  },
  Object {
    "abbr": "theatre",
    "description": "",
    "icon": "la-theater-masks",
    "name": "Theatre Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 24,
  },
  Object {
    "abbr": "90s-nostalgia",
    "description": "",
    "icon": "fas fa-birthday-cake",
    "name": "90s Nostalgia Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "jew-chosen-people",
    "description": "",
    "icon": "la-star-of-david",
    "name": "Jew Pack/Chosen People Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 24,
  },
  Object {
    "abbr": "2000s-nostalgia",
    "description": "",
    "icon": "00s",
    "name": "2000s Nostalgia Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 24,
  },
  Object {
    "abbr": "pride",
    "description": "",
    "icon": "la-rainbow",
    "name": "Pride Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 24,
  },
  Object {
    "abbr": "2014-holiday",
    "description": "",
    "icon": "fas fa-gift",
    "name": "2014 Holiday Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 23,
  },
  Object {
    "abbr": "period",
    "description": "",
    "icon": "la-tint",
    "name": "Period Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 23,
  },
  Object {
    "abbr": "geek",
    "description": "",
    "icon": "la-gamepad",
    "name": "Geek Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 23,
  },
  Object {
    "abbr": "reject-2",
    "description": "",
    "icon": "la-thumbs-down",
    "name": "Reject Pack 2",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 23,
  },
  Object {
    "abbr": "food",
    "description": "",
    "icon": "la-utensils",
    "name": "Food Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 23,
  },
  Object {
    "abbr": "dad",
    "description": "",
    "icon": "la-mars",
    "name": "Dad Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 23,
  },
  Object {
    "abbr": "college",
    "description": "",
    "icon": "la-beer",
    "name": "College Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 23,
  },
  Object {
    "abbr": "sci-fi",
    "description": "",
    "icon": "la-rocket",
    "name": "Sci-Fi Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 22,
  },
  Object {
    "abbr": "box-expansion",
    "description": "",
    "icon": "la-cube",
    "name": "Box Expansion",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 22,
  },
  Object {
    "abbr": "science",
    "description": "",
    "icon": "la-flask",
    "name": "Science Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 22,
  },
  Object {
    "abbr": "seasons-greetings",
    "description": "",
    "icon": "",
    "name": "Seasons Greetings Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 22,
  },
  Object {
    "abbr": "reject-3",
    "description": "",
    "icon": "la-thumbs-down",
    "name": "Reject Pack 3",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 22,
  },
  Object {
    "abbr": "2012-holiday",
    "description": "",
    "icon": "la-snowflake",
    "name": "2012 Holiday Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 22,
  },
  Object {
    "abbr": "trump-bug-out-bag-post-trump",
    "description": "",
    "icon": "la-radiation-alt",
    "name": "Trump Bug Out Bag/Post-Trump Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 21,
  },
  Object {
    "abbr": "pax-east-2014",
    "description": "",
    "icon": "la-arrow-circle-right",
    "name": "PAX East 2014",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 21,
  },
  Object {
    "abbr": "world-wide-web",
    "description": "",
    "icon": "la-at",
    "name": "World Wide Web Pack",
    "official": true,
    "promptsCount": 8,
    "responsesCount": 20,
  },
  Object {
    "abbr": "2013-holiday",
    "description": "",
    "icon": "la-sleigh",
    "name": "2013 Holiday Pack",
    "official": true,
    "promptsCount": 8,
    "responsesCount": 20,
  },
  Object {
    "abbr": "retail-product",
    "description": "",
    "icon": "la-shopping-bag",
    "name": "Retail Product Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 18,
  },
  Object {
    "abbr": "desert-bus-for-hope",
    "description": "",
    "icon": "la-tree",
    "name": "Desert Bus For Hope Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 18,
  },
  Object {
    "abbr": "gen-con-2018-midterm-election",
    "description": "",
    "icon": "la-democrat",
    "name": "Gen Con 2018 Midterm Election Pack",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 15,
  },
  Object {
    "abbr": "reject",
    "description": "",
    "icon": "la-thumbs-down",
    "name": "Reject Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 15,
  },
  Object {
    "abbr": "house-of-cards",
    "description": "",
    "icon": "la-flag-usa",
    "name": "House of Cards Pack",
    "official": true,
    "promptsCount": 8,
    "responsesCount": 15,
  },
  Object {
    "abbr": "hidden-compartment",
    "description": "",
    "icon": "la-boxes",
    "name": "Hidden Compartment Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 14,
  },
  Object {
    "abbr": "fascism",
    "description": "",
    "icon": "la-skull",
    "name": "Fascism Pack",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 14,
  },
  Object {
    "abbr": "vote-for-hillary",
    "description": "",
    "icon": "la-vote-yea",
    "name": "Vote For Hillary Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 11,
  },
  Object {
    "abbr": "table-top",
    "description": "",
    "icon": "la-chess-pawn",
    "name": "TableTop Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 11,
  },
  Object {
    "abbr": "vote-for-trump",
    "description": "",
    "icon": "la-vote-yea",
    "name": "Vote For Trump Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 11,
  },
  Object {
    "abbr": "click-hole-greeting-cards",
    "description": "",
    "icon": "la-bullseye",
    "name": "ClickHole Greeting Cards Pack (Target Exclusive)",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 9,
  },
  Object {
    "abbr": "mass-effect",
    "description": "",
    "icon": "la-biohazard",
    "name": "Mass Effect Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 9,
  },
  Object {
    "abbr": "pax-2010-oops-kit",
    "description": "",
    "icon": "PAX",
    "name": "PAX 2010 \\"Oops\\" Kit",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 8,
  },
  Object {
    "abbr": "nerd-bundle-a-few-more-cards-for-you-nerds",
    "description": "",
    "icon": "",
    "name": "Nerd Bundle: A Few More Cards For You Nerds (Target Exclusive)",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 8,
  },
  Object {
    "abbr": "pax-east-2013-promo-c",
    "description": "",
    "icon": "la-arrow-circle-right",
    "name": "PAX East 2013 Promo Pack C",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "pax-east-2013-promo-b",
    "description": "",
    "icon": "la-arrow-circle-right",
    "name": "PAX East 2013 Promo Pack B",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "pax-east-2014-panel-cards",
    "description": "",
    "icon": "la-users",
    "name": "PAX East 2014 - Panel Cards",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "pax-prime-2015-food-b",
    "description": "",
    "icon": "la-truck",
    "name": "PAX Prime 2015 Food Pack B (Coconut)",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "pax-prime-2015-food-c",
    "description": "",
    "icon": "la-tint",
    "name": "PAX Prime 2015 Food Pack C (Cherry)",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "pax-east-2013-promo-a",
    "description": "",
    "icon": "la-arrow-circle-right",
    "name": "PAX East 2013 Promo Pack A",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "pax-prime-2015-food-a",
    "description": "",
    "icon": "la-truck",
    "name": "PAX Prime 2015 Food Pack A (Mango)",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 7,
  },
  Object {
    "abbr": "hanukkah-lol",
    "description": "",
    "icon": "la-hanukiah",
    "name": "Hanukkah LOL Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 6,
  },
  Object {
    "abbr": "hidden-gems-bundle-a-few-new-cards-we-crammed-into-this-bundle",
    "description": "",
    "icon": "",
    "name": "Hidden Gems Bundle: A Few New Cards We Crammed Into This Bundle Pack (Amazon Exclusive)",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 6,
  },
  Object {
    "abbr": "jack-white-show",
    "description": "",
    "icon": "",
    "name": "Jack White Show Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 5,
  },
  Object {
    "abbr": "pax-prime-2014-panel-cards",
    "description": "",
    "icon": "la-user-times",
    "name": "PAX Prime 2014 - Panel Cards",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 4,
  },
  Object {
    "abbr": "retail-mini",
    "description": "",
    "icon": "la-store",
    "name": "Retail Mini Pack",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 2,
  },
  Object {
    "abbr": "black-box-press-kit",
    "description": "",
    "icon": "",
    "name": "Black Box Press Kit",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 0,
  },
  Object {
    "abbr": "hilarious",
    "description": "",
    "icon": "",
    "name": "Hilarious!",
    "official": false,
    "promptsCount": 129,
    "responsesCount": 539,
  },
  Object {
    "abbr": "skewered-and-roasted",
    "description": "",
    "icon": "",
    "name": "Skewered And Roasted",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 479,
  },
  Object {
    "abbr": "wtf-did-you-say",
    "description": "",
    "icon": "",
    "name": "WTF Did You Say?!?",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 475,
  },
  Object {
    "abbr": "conspiracy-theory",
    "description": "",
    "icon": "",
    "name": "Conspiracy Theory",
    "official": false,
    "promptsCount": 69,
    "responsesCount": 467,
  },
  Object {
    "abbr": "trumped-up-cards-the-world-s-biggest-deck",
    "description": "",
    "icon": "",
    "name": "Trumped UpCards: The World's Biggest Deck*",
    "official": false,
    "promptsCount": 89,
    "responsesCount": 458,
  },
  Object {
    "abbr": "rotten-apples-the-tasteless-adult-party-game",
    "description": "",
    "icon": "",
    "name": "Rotten Apples: The Tasteless Adult Party Game",
    "official": false,
    "promptsCount": 129,
    "responsesCount": 453,
  },
  Object {
    "abbr": "bad-campaign-the-presidential-party-game",
    "description": "",
    "icon": "",
    "name": "Bad Campaign, The Presidential Party Game!",
    "official": false,
    "promptsCount": 89,
    "responsesCount": 449,
  },
  Object {
    "abbr": "depravity",
    "description": "",
    "icon": "",
    "name": "Depravity",
    "official": false,
    "promptsCount": 98,
    "responsesCount": 431,
  },
  Object {
    "abbr": "cards-against-profanity",
    "description": "",
    "icon": "",
    "name": "Cards Against Profanity",
    "official": false,
    "promptsCount": 76,
    "responsesCount": 424,
  },
  Object {
    "abbr": "that-s-what-she-said-game",
    "description": "",
    "icon": "",
    "name": "That's What She Said Game",
    "official": false,
    "promptsCount": 57,
    "responsesCount": 399,
  },
  Object {
    "abbr": "the-catholic-card-game-base-deck",
    "description": "",
    "icon": "",
    "name": "The Catholic Card Game: Base Deck",
    "official": false,
    "promptsCount": 80,
    "responsesCount": 399,
  },
  Object {
    "abbr": "evil-apples",
    "description": "",
    "icon": "",
    "name": "Evil Apples",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 398,
  },
  Object {
    "abbr": "kiwis-versus-morality",
    "description": "",
    "icon": "",
    "name": "Kiwis Versus Morality",
    "official": false,
    "promptsCount": 94,
    "responsesCount": 392,
  },
  Object {
    "abbr": "dick",
    "description": "",
    "icon": "",
    "name": "Dick",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 374,
  },
  Object {
    "abbr": "bards-dispense-profanity",
    "description": "",
    "icon": "",
    "name": "Bards Dispense Profanity",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 374,
  },
  Object {
    "abbr": "cards-against-for-south-africa",
    "description": "",
    "icon": "",
    "name": "Cards Against/For South Africa",
    "official": false,
    "promptsCount": 107,
    "responsesCount": 359,
  },
  Object {
    "abbr": "the-game-without-decency",
    "description": "",
    "icon": "",
    "name": "The Game Without Decency",
    "official": false,
    "promptsCount": 149,
    "responsesCount": 358,
  },
  Object {
    "abbr": "kids-create-absurdity",
    "description": "",
    "icon": "",
    "name": "Kids Create Absurdity",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 349,
  },
  Object {
    "abbr": "cads-against-adulting",
    "description": "",
    "icon": "",
    "name": "Cads Against Adulting",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 349,
  },
  Object {
    "abbr": "not-parent-approved",
    "description": "",
    "icon": "",
    "name": "Not Parent Approved",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 339,
  },
  Object {
    "abbr": "kinder-perfect",
    "description": "",
    "icon": "",
    "name": "KinderPerfect (Commercial Set)",
    "official": false,
    "promptsCount": 69,
    "responsesCount": 323,
  },
  Object {
    "abbr": "cads-about-matrimony-poly",
    "description": "",
    "icon": "",
    "name": "Cads About Matrimony Poly Pack",
    "official": false,
    "promptsCount": 82,
    "responsesCount": 319,
  },
  Object {
    "abbr": "disgruntled-decks-navy-edition",
    "description": "",
    "icon": "",
    "name": "Disgruntled Decks: Navy Edition",
    "official": false,
    "promptsCount": 89,
    "responsesCount": 304,
  },
  Object {
    "abbr": "disgruntled-decks-air-force-edition",
    "description": "",
    "icon": "",
    "name": "Disgruntled Decks: Air Force Edition",
    "official": false,
    "promptsCount": 89,
    "responsesCount": 304,
  },
  Object {
    "abbr": "disgruntled-decks-army-edition",
    "description": "",
    "icon": "",
    "name": "Disgruntled Decks: Army Edition",
    "official": false,
    "promptsCount": 89,
    "responsesCount": 304,
  },
  Object {
    "abbr": "dirty-nasty-filthy",
    "description": "",
    "icon": "",
    "name": "Dirty Nasty Filthy",
    "official": false,
    "promptsCount": 141,
    "responsesCount": 302,
  },
  Object {
    "abbr": "disgruntled-decks-marine-corps-jarhead-edition",
    "description": "",
    "icon": "",
    "name": "Disgruntled Decks: Marine Corps/Jarhead Edition",
    "official": false,
    "promptsCount": 87,
    "responsesCount": 302,
  },
  Object {
    "abbr": "kiwis-against-morality",
    "description": "",
    "icon": "",
    "name": "Kiwis Against Morality",
    "official": false,
    "promptsCount": 49,
    "responsesCount": 297,
  },
  Object {
    "abbr": "personally-incorrect",
    "description": "",
    "icon": "",
    "name": "Personally Incorrect",
    "official": false,
    "promptsCount": 97,
    "responsesCount": 290,
  },
  Object {
    "abbr": "kids-against-maturity",
    "description": "",
    "icon": "",
    "name": "Kids Against Maturity",
    "official": false,
    "promptsCount": 150,
    "responsesCount": 271,
  },
  Object {
    "abbr": "fun-in-the-oven",
    "description": "",
    "icon": "",
    "name": "Fun in the Oven",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 258,
  },
  Object {
    "abbr": "cads-about-matrimony",
    "description": "",
    "icon": "",
    "name": "Cads About Matrimony",
    "official": false,
    "promptsCount": 54,
    "responsesCount": 230,
  },
  Object {
    "abbr": "charlie-foxtrot",
    "description": "",
    "icon": "",
    "name": "Charlie Foxtrot",
    "official": false,
    "promptsCount": 64,
    "responsesCount": 204,
  },
  Object {
    "abbr": "humanity-hates-trump-base-set",
    "description": "",
    "icon": "",
    "name": "Humanity Hates Trump: Base Set",
    "official": false,
    "promptsCount": 49,
    "responsesCount": 199,
  },
  Object {
    "abbr": "2016-election-game",
    "description": "",
    "icon": "",
    "name": "2016 Election Game",
    "official": false,
    "promptsCount": 49,
    "responsesCount": 197,
  },
  Object {
    "abbr": "cards-about-toronto",
    "description": "",
    "icon": "",
    "name": "Cards About Toronto",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 197,
  },
  Object {
    "abbr": "babies-vs-parents",
    "description": "",
    "icon": "",
    "name": "Babies vs. Parents",
    "official": false,
    "promptsCount": 79,
    "responsesCount": 185,
  },
  Object {
    "abbr": "the-catholic-card-game-five-deck-expansion",
    "description": "",
    "icon": "",
    "name": "The Catholic Card Game: Five Deck Expansion Pack",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 173,
  },
  Object {
    "abbr": "kinder-perfect-a-timeout-for-parents",
    "description": "",
    "icon": "",
    "name": "KinderPerfect: A Timeout For Parents (Kickstarter Set)",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 171,
  },
  Object {
    "abbr": "jaded-aid-a-card-game-to-save-humanitarians",
    "description": "",
    "icon": "",
    "name": "JadedAid: A Card Game to Save Humanitarians",
    "official": false,
    "promptsCount": 34,
    "responsesCount": 158,
  },
  Object {
    "abbr": "cads-about-maternity-a-game-for-bad-mommies",
    "description": "",
    "icon": "",
    "name": "Cads About Maternity - A game for bad mommies",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 154,
  },
  Object {
    "abbr": "cats-abiding-horribly-episode-i-the-dirty-goblin",
    "description": "",
    "icon": "",
    "name": "Cats Abiding Horribly: Episode I - The Dirty Goblin",
    "official": false,
    "promptsCount": 64,
    "responsesCount": 139,
  },
  Object {
    "abbr": "carps-angsty-manatee-volume-1",
    "description": "",
    "icon": "",
    "name": "Carps & Angsty Manatee - Volume 1",
    "official": false,
    "promptsCount": 19,
    "responsesCount": 129,
  },
  Object {
    "abbr": "carps-angsty-manatee-volume-2",
    "description": "",
    "icon": "",
    "name": "Carps & Angsty Manatee - Volume 2",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 125,
  },
  Object {
    "abbr": "cows-grilling-hamburgers-patty-1",
    "description": "",
    "icon": "",
    "name": "Cows Grilling Hamburgers - Patty Pack #1",
    "official": false,
    "promptsCount": 41,
    "responsesCount": 124,
  },
  Object {
    "abbr": "carps-angsty-manatee-texas-edition",
    "description": "",
    "icon": "",
    "name": "Carps & Angsty Manatee - Texas Edition",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 123,
  },
  Object {
    "abbr": "clones-attack-hilarity-1",
    "description": "",
    "icon": "",
    "name": "Clones Attack Hilarity #1",
    "official": false,
    "promptsCount": 37,
    "responsesCount": 111,
  },
  Object {
    "abbr": "clones-attack-hilarity-2",
    "description": "",
    "icon": "",
    "name": "Clones Attack Hilarity #2",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 109,
  },
  Object {
    "abbr": "cats-abiding-horribly-episode-ii-a-new-low",
    "description": "",
    "icon": "",
    "name": "Cats Abiding Horribly: Episode II - A New Low",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 109,
  },
  Object {
    "abbr": "cats-abiding-horribly-episode-iii-the-sj-ws-strike-back",
    "description": "",
    "icon": "",
    "name": "Cats Abiding Horribly: Episode III - The SJWs Strike Back",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 109,
  },
  Object {
    "abbr": "disgruntled-decks-coast-guard-coastie-edition",
    "description": "",
    "icon": "",
    "name": "Disgruntled Decks: Coast Guard/Coastie Edition",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 109,
  },
  Object {
    "abbr": "cards-for-the-masses",
    "description": "",
    "icon": "",
    "name": "Cards for the Masses",
    "official": false,
    "promptsCount": 109,
    "responsesCount": 109,
  },
  Object {
    "abbr": "potheads-against-sanity",
    "description": "",
    "icon": "",
    "name": "Potheads Against Sanity",
    "official": false,
    "promptsCount": 95,
    "responsesCount": 102,
  },
  Object {
    "abbr": "cocks-abreast-hostility-cock-one-just-the-tip",
    "description": "",
    "icon": "",
    "name": "Cocks Abreast Hostility: Cock Pack One: Just The Tip",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 99,
  },
  Object {
    "abbr": "cocks-abreast-hostility-cock-two-fowls-deep",
    "description": "",
    "icon": "",
    "name": "Cocks Abreast Hostility - Cock Pack Two: Fowls Deep",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 99,
  },
  Object {
    "abbr": "personally-incorrect-expansion-red-box",
    "description": "",
    "icon": "",
    "name": "Personally Incorrect - Expansion [Red Box]",
    "official": false,
    "promptsCount": 28,
    "responsesCount": 95,
  },
  Object {
    "abbr": "cards-and-punishment-vol-one",
    "description": "",
    "icon": "",
    "name": "Cards and Punishment Vol. One",
    "official": false,
    "promptsCount": 38,
    "responsesCount": 93,
  },
  Object {
    "abbr": "carbs-of-the-huge-manatee-online-dating-expansion-1",
    "description": "",
    "icon": "",
    "name": "Carbs of the Huge Manatee - Online Dating Expansion 1",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 92,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-2",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 2",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 92,
  },
  Object {
    "abbr": "carbs-of-the-huge-manatee-kink-expansion-1",
    "description": "",
    "icon": "",
    "name": "Carbs of the Huge Manatee - Kink Expansion 1",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 91,
  },
  Object {
    "abbr": "carbs-of-the-huge-manatee-general-expansion-1",
    "description": "",
    "icon": "",
    "name": "Carbs of the Huge Manatee: General Expansion 1",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 91,
  },
  Object {
    "abbr": "carbs-of-the-huge-manatee-general-expansion-2",
    "description": "",
    "icon": "",
    "name": "Carbs of the Huge Manatee: General Expansion 2",
    "official": false,
    "promptsCount": 17,
    "responsesCount": 89,
  },
  Object {
    "abbr": "carbs-of-the-huge-manatee-general-expansion-3",
    "description": "",
    "icon": "",
    "name": "Carbs of the Huge Manatee: General Expansion 3",
    "official": false,
    "promptsCount": 17,
    "responsesCount": 89,
  },
  Object {
    "abbr": "carbs-of-the-huge-manatee-dance-expansion-1",
    "description": "",
    "icon": "",
    "name": "Carbs of the Huge Manatee: Dance Expansion 1",
    "official": false,
    "promptsCount": 17,
    "responsesCount": 89,
  },
  Object {
    "abbr": "bad-hombres-against-fake-news-1",
    "description": "",
    "icon": "",
    "name": "Bad Hombres Against Fake News Pack 1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 89,
  },
  Object {
    "abbr": "guards-against-insanity-edition-4",
    "description": "",
    "icon": "",
    "name": "Guards Against Insanity, Edition 4",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 89,
  },
  Object {
    "abbr": "guards-against-insanity-edition-3",
    "description": "",
    "icon": "",
    "name": "Guards Against Insanity, Edition 3",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 89,
  },
  Object {
    "abbr": "guards-against-insanity-edition-2",
    "description": "",
    "icon": "",
    "name": "Guards Against Insanity, Edition 2",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 89,
  },
  Object {
    "abbr": "guards-against-insanity-edition-5",
    "description": "",
    "icon": "",
    "name": "Guards Against Insanity, Edition 5",
    "official": false,
    "promptsCount": 21,
    "responsesCount": 89,
  },
  Object {
    "abbr": "personally-incorrect-expansion-2-yellow-box",
    "description": "",
    "icon": "",
    "name": "Personally Incorrect - Expansion 2 [Yellow Box]",
    "official": false,
    "promptsCount": 34,
    "responsesCount": 89,
  },
  Object {
    "abbr": "the-worst-card-game-2016-national-edition",
    "description": "",
    "icon": "",
    "name": "The Worst Card Game: 2016 National Edition",
    "official": false,
    "promptsCount": 17,
    "responsesCount": 88,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-1",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 1",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 86,
  },
  Object {
    "abbr": "cads-about-matrimony-expansion-1",
    "description": "",
    "icon": "",
    "name": "Cads About Matrimony: Expansion 1",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 84,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-3",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 3",
    "official": false,
    "promptsCount": 33,
    "responsesCount": 82,
  },
  Object {
    "abbr": "words-against-morality-volume-2",
    "description": "",
    "icon": "",
    "name": "Words Against Morality: Volume 2",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "cows-against-hamburgers-patty-1",
    "description": "",
    "icon": "",
    "name": "Cows Against Hamburgers - Patty Pack #1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "guards-against-insanity-edition-1",
    "description": "",
    "icon": "",
    "name": "Guards Against Insanity, Edition 1",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 79,
  },
  Object {
    "abbr": "words-against-morality-volume-3",
    "description": "",
    "icon": "",
    "name": "Words Against Morality: Volume 3",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "words-against-morality-volume-4",
    "description": "",
    "icon": "",
    "name": "Words Against Morality: Volume 4",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "pigs-against-profanity-volume-1",
    "description": "",
    "icon": "",
    "name": "Pigs Against Profanity: Volume 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crows-adopt-vulgarity-vol-4",
    "description": "",
    "icon": "",
    "name": "Crows Adopt Vulgarity, Vol. 4",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crows-adopt-vulgarity-vol-3",
    "description": "",
    "icon": "",
    "name": "Crows Adopt Vulgarity, Vol. 3",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "cakes-athirst-hilarity-volume-1",
    "description": "",
    "icon": "",
    "name": "Cakes Athirst Hilarity Volume 1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crows-adopt-vulgarity-vol-2",
    "description": "",
    "icon": "",
    "name": "Crows Adopt Vulgarity, Vol. 2",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "humanity-hates-the-holidays-love-edition",
    "description": "",
    "icon": "",
    "name": "Humanity Hates the Holidays \\"Love\\" Edition",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-7",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 7",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-6",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 6",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 79,
  },
  Object {
    "abbr": "words-against-morality-volume-1",
    "description": "",
    "icon": "",
    "name": "Words Against Morality: Volume 1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crazy-horrible-rabbit-vol-1",
    "description": "",
    "icon": "",
    "name": "Crazy & Horrible Rabbit - Vol. 1",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 79,
  },
  Object {
    "abbr": "cakes-athirst-hilarity-volume-3",
    "description": "",
    "icon": "",
    "name": "Cakes Athirst Hilarity Volume 3",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "cakes-athirst-hilarity-volume-4",
    "description": "",
    "icon": "",
    "name": "Cakes Athirst Hilarity Volume 4",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "cakes-athirst-hilarity-volume-2",
    "description": "",
    "icon": "",
    "name": "Cakes Athirst Hilarity Volume 2",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crows-adopt-vulgarity-vol-1",
    "description": "",
    "icon": "",
    "name": "Crows Adopt Vulgarity, Vol. 1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "humanity-hates-trump-expansion-1",
    "description": "",
    "icon": "",
    "name": "Humanity Hates Trump: Expansion Pack 1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-4",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 4",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 79,
  },
  Object {
    "abbr": "humanity-hates-the-holidays",
    "description": "",
    "icon": "",
    "name": "Humanity Hates The Holidays",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "humanity-hates-trump-expansion-2-humanity-hates-hillary-too",
    "description": "",
    "icon": "",
    "name": "Humanity Hates Trump: Expansion Pack 2 - Humanity Hates Hillary, Too",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 79,
  },
  Object {
    "abbr": "crabs-adjust-humidity-volume-5",
    "description": "",
    "icon": "",
    "name": "Crabs Adjust Humidity: Volume 5",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 79,
  },
  Object {
    "abbr": "pigs-against-profanity-volume-2",
    "description": "",
    "icon": "",
    "name": "Pigs Against Profanity: Volume 2",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 78,
  },
  Object {
    "abbr": "pigs-against-profanity-volume-3",
    "description": "",
    "icon": "",
    "name": "Pigs Against Profanity: Volume 3",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 78,
  },
  Object {
    "abbr": "clams-attempt-harmonica-volume-1",
    "description": "",
    "icon": "",
    "name": "Clams Attempt Harmonica, Volume 1",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 77,
  },
  Object {
    "abbr": "cards-and-punishment-vol-two",
    "description": "",
    "icon": "",
    "name": "Cards and Punishment Vol. Two",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 76,
  },
  Object {
    "abbr": "cards-with-no-sexuality",
    "description": "",
    "icon": "",
    "name": "Cards With No Sexuality",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 74,
  },
  Object {
    "abbr": "kinder-perfect-more-expansion",
    "description": "",
    "icon": "",
    "name": "KinderPerfect: More Expansion Pack",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 74,
  },
  Object {
    "abbr": "kinder-perfect-tween-expansion",
    "description": "",
    "icon": "",
    "name": "KinderPerfect: Tween Expansion Pack",
    "official": false,
    "promptsCount": 23,
    "responsesCount": 74,
  },
  Object {
    "abbr": "kinder-perfect-naughty-expansion",
    "description": "",
    "icon": "",
    "name": "KinderPerfect: Naughty Expansion Pack",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 74,
  },
  Object {
    "abbr": "the-worst-card-game-colorado-edition",
    "description": "",
    "icon": "",
    "name": "The Worst Card Game: Colorado Edition",
    "official": false,
    "promptsCount": 35,
    "responsesCount": 71,
  },
  Object {
    "abbr": "that-s-what-she-said-game-second-expansion",
    "description": "",
    "icon": "",
    "name": "That's What She Said Game - Second Expansion",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 69,
  },
  Object {
    "abbr": "not-parent-approved-expansion-1",
    "description": "",
    "icon": "",
    "name": "Not Parent Approved Expansion Pack #1",
    "official": false,
    "promptsCount": 19,
    "responsesCount": 59,
  },
  Object {
    "abbr": "not-parent-approved-expansion-2",
    "description": "",
    "icon": "",
    "name": "Not Parent Approved Expansion Pack #2",
    "official": false,
    "promptsCount": 19,
    "responsesCount": 59,
  },
  Object {
    "abbr": "blurbs-against-buffalo",
    "description": "",
    "icon": "",
    "name": "Blurbs Against Buffalo",
    "official": false,
    "promptsCount": 17,
    "responsesCount": 53,
  },
  Object {
    "abbr": "that-s-what-she-said-game-first-expansion",
    "description": "",
    "icon": "",
    "name": "That's What She Said Game - First Expansion",
    "official": false,
    "promptsCount": 49,
    "responsesCount": 49,
  },
  Object {
    "abbr": "jaded-aid-peace-corps-expansion",
    "description": "",
    "icon": "",
    "name": "JadedAid: Peace Corps Expansion Pack",
    "official": false,
    "promptsCount": 9,
    "responsesCount": 45,
  },
  Object {
    "abbr": "the-catholic-card-game-life-teen-expansion",
    "description": "",
    "icon": "",
    "name": "The Catholic Card Game: Life Teen Expansion Pack",
    "official": false,
    "promptsCount": 8,
    "responsesCount": 44,
  },
  Object {
    "abbr": "trumped-up-cards-astonishlingly-excellent-wealthcare-expansion",
    "description": "",
    "icon": "",
    "name": "Trumped UpCards: Astonishlingly Excellent Wealthcare! Expansion Pack",
    "official": false,
    "promptsCount": 11,
    "responsesCount": 42,
  },
  Object {
    "abbr": "the-catholic-card-game-generations-expansion",
    "description": "",
    "icon": "",
    "name": "The Catholic Card Game: Generations Expansion Pack",
    "official": false,
    "promptsCount": 11,
    "responsesCount": 41,
  },
  Object {
    "abbr": "trumped-up-cards-many-sides-expansion",
    "description": "",
    "icon": "",
    "name": "Trumped UpCards: Many Sides  Expansion Pack",
    "official": false,
    "promptsCount": 11,
    "responsesCount": 38,
  },
  Object {
    "abbr": "trumped-up-cards-alternative-facts-expansion",
    "description": "",
    "icon": "",
    "name": "Trumped UpCards: Alternative Facts Expansion Pack",
    "official": false,
    "promptsCount": 8,
    "responsesCount": 38,
  },
  Object {
    "abbr": "knitters-against-swatches-first-edition",
    "description": "",
    "icon": "",
    "name": "Knitters Against Swatches First Edition",
    "official": false,
    "promptsCount": 5,
    "responsesCount": 29,
  },
  Object {
    "abbr": "knitters-against-swatches-second-edition",
    "description": "",
    "icon": "",
    "name": "Knitters Against Swatches Second Edition",
    "official": false,
    "promptsCount": 7,
    "responsesCount": 27,
  },
  Object {
    "abbr": "cols-against-kentucky-2",
    "description": "",
    "icon": "",
    "name": "Cols Against Kentucky 2",
    "official": false,
    "promptsCount": 8,
    "responsesCount": 26,
  },
  Object {
    "abbr": "voter-s-choice-the-fourth-expansion",
    "description": "",
    "icon": "",
    "name": "Voter's Choice: The Fourth Expansion",
    "official": false,
    "promptsCount": 11,
    "responsesCount": 21,
  },
  Object {
    "abbr": "voter-s-choice-the-third-expansion",
    "description": "",
    "icon": "",
    "name": "Voter's Choice: The Third Expansion",
    "official": false,
    "promptsCount": 10,
    "responsesCount": 21,
  },
  Object {
    "abbr": "voter-s-choice-the-second-expansion",
    "description": "",
    "icon": "",
    "name": "Voter's Choice: The Second Expansion",
    "official": false,
    "promptsCount": 14,
    "responsesCount": 19,
  },
  Object {
    "abbr": "voter-s-choice-the-first-expansion",
    "description": "",
    "icon": "",
    "name": "Voter's Choice: The First Expansion",
    "official": false,
    "promptsCount": 7,
    "responsesCount": 19,
  },
  Object {
    "abbr": "cols-despite-kentucky",
    "description": "",
    "icon": "",
    "name": "Cols Despite Kentucky",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 17,
  },
  Object {
    "abbr": "conspiracy-theory-kickstarter-bonus-cards",
    "description": "",
    "icon": "",
    "name": "Conspiracy Theory - Kickstarter Bonus Cards Pack",
    "official": false,
    "promptsCount": 3,
    "responsesCount": 10,
  },
  Object {
    "abbr": "cats-abiding-horribly-bonus-cards-2",
    "description": "",
    "icon": "",
    "name": "Cats Abiding Horribly Bonus Cards 2",
    "official": false,
    "promptsCount": 4,
    "responsesCount": 4,
  },
  Object {
    "abbr": "cats-abiding-horribly-bonus-cards",
    "description": "",
    "icon": "",
    "name": "Cats Abiding Horribly Bonus Cards",
    "official": false,
    "promptsCount": 4,
    "responsesCount": 4,
  },
  Object {
    "abbr": "humanity-hates-trump-kickstarter-promo-cards",
    "description": "",
    "icon": "",
    "name": "Humanity Hates Trump: Kickstarter Promo Cards",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 4,
  },
]
`;
